[gd_scene load_steps=3 format=3 uid="uid://d8k6y8q3x4n5o"]

[ext_resource type="Script" path="res://scripts/game_grid.gd" id="1_4u4vx"]
[ext_resource type="Script" path="res://scripts/visual_effects.gd" id="2_5u4vx"]

[node name="GameGrid" type="Node2D"]
script = ExtResource("1_4u4vx")

[node name="DotsContainer" type="Node2D" parent="."]
position = Vector2(360, 640)

[node name="UI" type="CanvasLayer" parent="."]

[node name="MovesLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
text = "Moves: 16"
font_size = 24

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 220.0
offset_top = 20.0
offset_right = 400.0
offset_bottom = 60.0
text = "Score: 0"
font_size = 24

[node name="ObjectiveLabel" type="Label" parent="UI"]
offset_left = 420.0
offset_top = 20.0
offset_right = 700.0
offset_bottom = 60.0
text = "Objective: 0/10"
font_size = 24

[node name="CompletionPopup" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI/CompletionPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CompletionPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/CompletionPopup/VBoxContainer"]
layout_mode = 2
text = "Level Complete!"
horizontal_alignment = 1
font_size = 32

[node name="StarsContainer" type="HBoxContainer" parent="UI/CompletionPopup/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Star1" type="TextureRect" parent="UI/CompletionPopup/VBoxContainer/StarsContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("star.png")

[node name="Star2" type="TextureRect" parent="UI/CompletionPopup/VBoxContainer/StarsContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("star.png")

[node name="Star3" type="TextureRect" parent="UI/CompletionPopup/VBoxContainer/StarsContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("star.png")

[node name="ContinueButton" type="Button" parent="UI/CompletionPopup/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="VisualEffects" type="Node" parent="."]
script = ExtResource("2_5u4vx") 